# rin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: inspect.ipynb  noise.ipynb  patch.ipynb  sample.ipynb  train_rin.ipynb  train_unet.ipynb
src/data/: celeba.py
src/models/: diffusion.py  rin.py
src/models/components/: block.py  latents.py  time.py  tokenizer.py
src/utils/: noise.py  patch.py  sample.py
tests/: test_block.py  test_celeba.py  test_latents.py  test_noise.py  test_patch.py  test_rin.py  test_sample.py  test_time.py  test_tokenizer.py
